--- a/notebooks/report_view.ipynb
+++ b/notebooks/report_view.ipynb
@@ -9,10 +9,11 @@
    "source": [
     "from pyspark.sql import SparkSession\n",
     "\n",
-    "spark = SparkSession.builder \\\n",
-    "            .config(\"spark.sql.warehouse.dir\", \"spark-warehouse\") \\\n",
-    "            .enableHiveSupport() \\\n",
-    "            .getOrCreate()"
+    "spark = (\n",
+    "    SparkSession.builder.config(\"spark.sql.warehouse.dir\", \"spark-warehouse\")\n",
+    "    .enableHiveSupport()\n",
+    "    .getOrCreate()\n",
+    ")"
    ]
   },
   {
@@ -46,17 +47,18 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "from pyspark.sql import functions as F \n",
+    "from pyspark.sql import functions as F\n",
     "\n",
     "df = spark.table(\"ga_result2\").groupBy(\"run_id\").count()\n",
     "df = df.sort(df.run_id.asc())\n",
-    "df = df.withColumn('run_id', F.monotonically_increasing_id())\n",
+    "df = df.withColumn(\"run_id\", F.monotonically_increasing_id())\n",
     "\n",
     "pd = df.toPandas()\n",
     "pd.plot(\n",
-    "  x='run_id', \n",
-    "  y='count', ylim=(pd['count'].min() - 1, pd['count'].max() + 1), \n",
-    "  xticks = pd['run_id']\n",
+    "    x=\"run_id\",\n",
+    "    y=\"count\",\n",
+    "    ylim=(pd[\"count\"].min() - 1, pd[\"count\"].max() + 1),\n",
+    "    xticks=pd[\"run_id\"],\n",
     ")"
    ]
   },
@@ -92,13 +94,14 @@
    "source": [
     "df = spark.table(\"ga_result2\")\n",
     "df = df.filter(df.status == \"Fail\").groupBy(\"run_id\").count().sort(df.run_id.asc())\n",
-    "df = df.withColumn('run_id', F.monotonically_increasing_id())\n",
+    "df = df.withColumn(\"run_id\", F.monotonically_increasing_id())\n",
     "\n",
     "pd = df.toPandas()\n",
     "pd.plot(\n",
-    "  x='run_id', \n",
-    "  y='count', ylim=(pd['count'].min() - 1, pd['count'].max() + 1), \n",
-    "  xticks = pd['run_id']\n",
+    "    x=\"run_id\",\n",
+    "    y=\"count\",\n",
+    "    ylim=(pd[\"count\"].min() - 1, pd[\"count\"].max() + 1),\n",
+    "    xticks=pd[\"run_id\"],\n",
     ")"
    ]
   }
